replacing links to courses & certifications with actual certificates

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -15,7 +15,14 @@
                 </div>
             <li>
                 <div class="flexdiv">
-                    <span class="left">C++ Associate Programmer, C++ Institute</span>
+                    <span class="left">
+                        <a target="_blank" href="https://verify.openedg.org/?id=wsKj.dFVJ.hnBd"
+                            class="link-with-indicator">
+                            C++ Associate Programmer
+                            <i class="fas fa-external-link-alt fa-xs"></i>
+                        </a><br>
+                        C++ Institute
+                    </span>
                     <span class="right">July, 2024</span>
             </li>
             <li>
