--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -4,7 +4,11 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Post Graduate Program in Cloud Computing<br>
+                    <a target="_blank" href="https://la.utexas.edu/texasexeced/digitalVerification.html?key=WXLKL"
+                        class="link-with-indicator">
+                        Post Graduate Program in Cloud Computing
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a><br>
                     University of Texas at Austin<br>
                     Texas McCombs School of Business<br>
                     Post Graduate course to prepare students to get their <strong>AWS</strong> and
@@ -30,13 +34,13 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Udemy Labs - Certified Kubernetes Application Developer<br>
                     <a target="_blank"
-                        href="https://learn.kodekloud.com/user/courses/udemy-labs-certified-kubernetes-application-developer"
+                        href="https://learn.kodekloud.com/user/certificate/88ecd5a7-5b29-464a-ad57-e098fdaff4b7"
                         class="link-with-indicator">
-                        KodeKloud Training
+                        Udemy Labs - Certified Kubernetes Application Developer
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    KodeKloud Training
                 </span>
                 <span class="right">
                     September, 2024
@@ -48,28 +52,13 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Kubernetes Challenges<br>
-                    <a target="_blank" href="https://learn.kodekloud.com/user/courses/kubernetes-challenges"
+                    <a target="_blank"
+                        href="https://learn.kodekloud.com/user/certificate/e9274bc5-c2d1-41bb-9d57-6ed60699bc4c"
                         class="link-with-indicator">
-                        KodeKloud Training
+                        Kubernetes Challenges
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
-                </span>
-                <span class="right">
-                    September, 2024
-                </span>
-            </div>
-        </li>
-
-        <li>
-            <div class="flexdiv">
-                <span class="left">
-                    Kubernetes - Hands-on<br>
-                    <a target="_blank" href="https://www.udemy.com/course/learn-kubernetes/"
-                        class="link-with-indicator">
-                        KodeKloud Training
-                        <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    KodeKloud Training
                 </span>
                 <span class="right">
                     September, 2024
@@ -79,13 +68,43 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA &
-                    Hibernate<br>
+                    <a target="_blank"
+                        href="https://learn.kodekloud.com/user/certificate/e64ee79e-722c-47d7-b646-01d36b93405f"
+                        class="link-with-indicator">
+                        Udemy Labs - Online Kubernetes Lab for Beginners - Hands On
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a><br>
+                    KodeKloud Training
+                </span>
+                <span class="right">
+                    September, 2024
+                </span>
+            </div>
+        </li>
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    <a target="_blank" href="https://www.udemy.com/certificate/UC-0456a149-668a-4d44-8a71-db08bcbae9fa/"
+                        class="link-with-indicator">
+                        Kubernetes for the Absolute Beginners - Hands-on
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a><br>
+                    KodeKloud Training
+                </span>
+                <span class="right">
+                    September, 2024
+                </span>
+            </div>
+        </li>
+        <li>
+            <div class="flexdiv">
+                <span class="left">
                     <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
                         class="link-with-indicator">
-                        Udemy
+                        Spring Boot 3, Spring 6 & Hibernate for Beginners
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    Udemy
                 </span>
                 <span class="right">
                     March, 2024
@@ -95,12 +114,12 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Go: The Complete Developer's Guide (Golang)<br>
-                    <a target="_blank" href="https://www.udemy.com/course/go-the-complete-developers-guide"
+                    <a target="_blank" href="https://www.udemy.com/certificate/UC-33edba4d-56e5-45fc-9846-c3bad412b29d/"
                         class="link-with-indicator">
-                        Udemy
+                        Go: The Complete Developer's Guide (Golang)
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    Udemy
                 </span>
                 <span class="right">
                     October, 2023
@@ -111,12 +130,12 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Working with React and Go (Golang)<br>
-                    <a target="_blank" href="https://www.udemy.com/course/working-with-react-and-go-golang/"
+                    <a target="_blank" href="https://www.udemy.com/certificate/UC-18403cf1-33bc-4be9-baec-448b3267a7a0/"
                         class="link-with-indicator">
-                        Udemy
+                        Working with React and Go (Golang)
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    Udemy
                 </span>
                 <span class="right">
                     October, 2023
@@ -126,11 +145,12 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    React Styled Components<br>
-                    <a target="_blank" href="https://www.udemy.com/course/react-styled-components">
-                        WebDevEducation
+                    <a target="_blank"
+                        href="https://www.udemy.com/certificate/UC-4c9d1865-3e14-439f-b087-ecf7fd9cdcf5/">
+                        React Styled Components
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    WebDevEducation
                 </span>
                 <span class="right">
                     April, 2023
@@ -140,11 +160,12 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Deploying Java Spring Apps Online to Amazon Cloud (AWS)<br>
-                    <a target="_blank" href="https://www.udemy.com/course/deploy-java-spring-apps-online">
-                        Udemy
+                    <a target="_blank"
+                        href="https://www.udemy.com/certificate/UC-1ce2fdd9-2fa0-4cf5-9a88-b1f354f3c30c/">
+                        Deploying Java Spring Apps Online to Amazon Cloud (AWS)
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    Udemy
                 </span>
                 <span class="right">
                     March, 2023
@@ -154,12 +175,12 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Create web app with Angular 12, .NET Core Web API & Mongo DB<br>
                     <a target="_blank"
-                        href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
-                        Udemy
+                        href="https://www.udemy.com/certificate/UC-bca2d1b8-eecf-4781-b04b-eb2c9fe04525/">
+                        Create web app with Angular 12, .NET Core Web API & Mongo DB
                         <i class="fas fa-external-link-alt fa-xs"></i>
-                    </a>
+                    </a><br>
+                    Udemy
                 </span>
                 <span class="right">
                     March, 2023
