--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,24 +1,144 @@
-<details open> <a name="professional"></a>
+<details open>
     <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
-    <ul class="skills-list">
-        <li>Active Top Secret security clearance</li>
-        <li>C/C++ 2.0, Rust, Golang</li>
-        <li>AWS, Azure</li>
-        <li>Python, PowerShell, bash</li>
-        <li>Kubernetes, Docker</li>
-        <li>SQL, NoSQL</li>
-        <li>Java, Spring & Spring Boot</li>
-        <li>TypeScript and JavaScript</li>
-        <li>HTML, CSS, Angular, React</li>
-        <li>C#, .NET, .NET Core</li>
-        <li>Windows and Linux Platforms</li>
-        <li>Regular Expressions (RegEx)</li>
-        <li>SQL Server, MySQL, SQLite, MongoDB, DynamoDB</li>
-        <li>Classic ASP</li>
-        <li>Visual Studio Tools for Office (VSTO), OpenXML SDK</li>
-        <li>Windows Desktop Applications, Windows Services, Backend Services</li>
-        <li>Digital Rights Management (DRM/ADRMS)</li>
-        <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
-        <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
-    </ul>
+    <div class="skills-list">
+        <div class="skill-item"><strong>Cloud Platforms:</strong>
+            <span>
+                <span class="nowrap">AWS<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Azure<span class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Backend Development:</strong>
+            <span>
+                <span class="nowrap">Java<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Spring Boot<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Classic ASP<span class="competency-indicator very-proficient"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Containerization:</strong>
+            <span>
+                <span class="nowrap">Docker<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Kubernetes<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Frontend Development:</strong>
+            <span>
+                <span class="nowrap">HTML<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">CSS<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">JavaScript<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">TypeScript<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Angular<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">React<span class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Databases:</strong>
+            <span>
+                SQL (<span class="nowrap">SQL Server<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">MySQL<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">PostgreSQL<span class="competency-indicator basic-understanding"></span></span>
+                ),
+                NoSQL (<span class="nowrap">MongoDB<span
+                        class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">DynamoDB<span class="competency-indicator basic-understanding"></span></span>
+                )
+            </span>
+        </div>
+        <!-- <div class="skill-item"><strong>Message Queues and Streaming:</strong>
+            <span>
+                <span class="nowrap">RabbitMQ<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">ZeroMQ<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">Amazon SQS<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">Amazon SNS<span class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div> -->
+        <!-- <div class="skill-item"><strong>Version Control:</strong>
+            <span>
+                <span class="nowrap">Git<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">SVN<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">GitHub<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">GitLab<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div> -->
+        <div class="skill-item"><strong>Scripting:</strong>
+            <span>
+                <span class="nowrap">Python<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">PowerShell<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">bash<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Regular Expressions (RegEx)<span
+                        class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <!-- <div class="skill-item"><strong>Frameworks and SDKs:</strong>
+            <span>
+                <span class="nowrap">.NET Framework<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Spring Boot<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">OpenXML SDK<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">Visual Studio Tools for Office (VSTO)<span
+                        class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div> -->
+        <div class="skill-item"><strong>System Architecture:</strong>
+            <span>
+                <span class="nowrap">System Design<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Distributed Systems<span
+                        class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Microservices<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">RESTful APIs<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Cloud Architecture<span class="competency-indicator very-proficient"></span>
+                </span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Device Drivers, Windows Services, APIs:</strong>
+            <span>
+                <span class="nowrap">C/C++<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Rust<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">GoLang<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Windows Desktop Applications:</strong>
+            <span>
+                <span class="nowrap">C# .NET<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Visual Basic 6.0<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Visual FoxPro<span class="competency-indicator very-proficient"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>CI/CD and DevOps:</strong>
+            <span>
+                <span class="nowrap">CruiseControl<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">NANT<span class="competency-indicator very-proficient"></span></span>,
+                <span class="nowrap">Jenkins<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Jira<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">AWS CI/CD Tools<span
+                        class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Operating Systems:</strong>
+            <span>
+                <span class="nowrap">Windows<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">macOS<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Linux<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Security:</strong>
+            <span>
+                <span class="nowrap">Digital Rights Management (DRM/ADRMS)<span
+                        class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Active Top Secret security clearance<span
+                        class="competency-indicator very-proficient"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Methodologies:</strong>
+            <span>
+                <span class="nowrap">Agile<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Scrum<span class="competency-indicator good-knowledge"></span></span>
+            </span>
+        </div>
+        <div class="skill-item"><strong>Instrumentation:</strong>
+            <span>
+                <span class="nowrap">Bounds Checker<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Lint<span class="competency-indicator good-knowledge"></span></span>,
+                <span class="nowrap">Purify<span class="competency-indicator basic-understanding"></span></span>,
+                <span class="nowrap">Redgate ANTs<span class="competency-indicator basic-understanding"></span></span>
+            </span>
+        </div>
+    </div>
 </details>
